# fuma-lib-permission

./: Makefile.am  aclocal.m4  configure.ac  version.txt
include/: Makefile.am  Permission.hpp  Test.hpp
m4/: Makefile.am  libtool.m4  unix.m4  windows.m4
m4/options/: compiler.m4  debug.m4  host.m4  tests.m4
m4/programs/: banner.m4  toolchain.m4
m4/unix/: stat.m4
scripts/: Makefile.am  build.sh  file_to_source.sh
src/: Makefile.am  Permission.cpp  Unix.cpp  Unix.hpp  Windows.cpp  Windows.hpp
test/: Makefile.am  TestPermission.cpp  TestUnixPermission.cpp  TestWindowsPermission.cpp
