# autoconf m4 helper macros
EXTRA_DIST= \
        options/debug.m4 \
        options/host.m4  \
        options/tests.m4 \
        options/compiler.m4 \
        \
        unix.m4 \
        unix/stat.m4 \
        unix/username.m4 \
        \
        windows.m4 \
        windows/file_attributes.m4\
        windows/username.m4\
        \
        programs/banner.m4 \
        programs/toolchain.m4
